fix(portfolio-de-pratica.html): add target="_blank" to links to open in new tab fix(styles/style-portfolio.css): adjust padding and gap for smaller screens fix(styles/style-portfolio.css): adjust width of presentation content for smaller screens fix(styles/style-portfolio.css): center title and buttons for smaller screens fix(styles/style-portfolio.css): adjust padding for header on smaller screens fix(styles/style-portfolio.css): adjust menu width for smaller screens fix(styles/style-portfolio.css): adjust width of presentation content for smaller screens

--- a/styles/style-portfolio.css
+++ b/styles/style-portfolio.css
@@ -125,7 +125,7 @@ body {
 
 @media(max-width: 1200px) {
     .cabecalho {
-        padding: 10%;
+        padding: 5%;
     }
 
     .cabecalho__menu {
@@ -135,7 +135,8 @@ body {
     .apresentacao {
         flex-direction: column-reverse;
         padding: 5%;
-        gap: 41;
+        gap: 41px;
+        width: 90%;
     }
 
     .apresentacao__conteudo {
@@ -145,6 +146,14 @@ body {
 
     .apresentacao__imagem {
         width: 75%;
+    }
+
+    .apresentacao__conteudo__titulo {
+        text-align: center;
+    }
+
+    .apresentacao__conteudo__botoes__subtitulo {
+        text-align: center;
     }
 
     .rodape {
